[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/settings/settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=5]
action = "enter"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.694118, 0.494118, 0.494118, 1 )

[node name="SpawnFrequency" type="Label" parent="."]
show_behind_parent = true
margin_left = 27.0
margin_top = 84.0
margin_right = 228.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "Spawn Frequency"

[node name="CloseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -18.5
margin_right = 85.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 6 )
text = "Close"

[node name="Music" type="Label" parent="."]
margin_left = 26.0
margin_top = 127.0
margin_right = 88.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 3 )
text = "Music"

[node name="IsMusicOn" type="CheckButton" parent="."]
margin_left = 229.0
margin_top = 126.0
margin_right = 305.0
margin_bottom = 166.0

[node name="SpawnFrequencyInput" type="SpinBox" parent="."]
margin_left = 234.0
margin_top = 83.0
margin_right = 325.0
margin_bottom = 114.0
min_value = 0.5
max_value = 2.0
step = 0.25
value = 0.5

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="toggled" from="IsMusicOn" to="." method="_on_is_music_on_toggled"]
[connection signal="value_changed" from="SpawnFrequencyInput" to="." method="_on_spawn_frequency_input_value_changed"]
